applications/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ui
  namespace: default
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - argocd
  rules:
    - host: argocd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
